fixed spacing

--- a/style/style.css
+++ b/style/style.css
@@ -386,12 +386,12 @@ footer i {
   }
 
   .developer-picture {
-    width: 30%;
+    width: 25%;
     margin-top: 20px;
   }
 
   .developer-description {
-    width: 70%;
+    width: 75%;
     font-size: 16px;
   }
 
